<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:padding="20dp"
    android:layout_width="400dp"
    android:layout_height="730dp"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context=".EnterText">

    <TextView
        android:id="@+id/edit_password"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:gravity="bottom"
        android:textSize="65sp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_1"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/edit_password"
        android:layout_alignParentStart="true"
        android:textSize="40sp"
        android:text="@string/one"/>
    <Button
        android:id="@+id/button_2"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/edit_password"
        android:layout_toStartOf="@id/button_3"
        android:textSize="40sp"
        android:text="@string/two"/>
    <Button
        android:id="@+id/button_3"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/edit_password"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/three"/>
    <Button
        android:id="@+id/button_4"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_below="@id/button_1"
        android:layout_alignParentStart="true"
        android:textSize="40sp"
        android:text="@string/four"/>
    <Button
        android:id="@+id/button_5"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button_1"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/button_6"
        android:textSize="40sp"
        android:text="@string/five"/>
    <Button
        android:id="@+id/button_6"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button_1"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/six"/>
    <Button
        android:id="@+id/button_7"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button_4"
        android:layout_alignParentStart="true"
        android:textSize="40sp"
        android:text="@string/seven"/>
    <Button
        android:id="@+id/button_8"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button_4"
        android:layout_toStartOf="@id/button_9"
        android:textSize="40sp"
        android:text="@string/eight"/>
    <Button
        android:id="@+id/button_9"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button_4"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/nine"/>
    <Button
        android:id="@+id/button_0"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button_7"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:text="@string/zero"/>
    <Button
        android:id="@+id/delete_digit"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button_7"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/delete_digit"/>

    <Button
        android:id="@+id/save_password"
        android:text="@string/save"
        android:onClick="onClick"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="400dp"
        android:layout_height="70dp"/>
</RelativeLayout>