<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_layout"
    android:padding="20dp"
    android:layout_width="400dp"
    android:layout_height="730dp"
    android:background="#8d6b9c"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context=".EnterText">

    <TextView
        android:id="@+id/text_password"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:gravity="bottom"
        android:text="@string/four_dots"
        android:textSize="140sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/text_password_add"
        android:layout_width="150dp"
        android:layout_height="250dp"
        android:gravity="bottom"
        android:textSize="140sp"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button1"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/text_password"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_alignParentStart="true"
        android:textSize="40sp"
        android:text="@string/one"/>
    <Button
        android:id="@+id/button2"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/text_password"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_toStartOf="@id/button3"
        android:textSize="40sp"
        android:text="@string/two"/>
    <Button
        android:id="@+id/button3"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/text_password"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/three"/>
    <Button
        android:id="@+id/button4"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_below="@id/button1"
        android:layout_alignParentStart="true"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:text="@string/four"/>
    <Button
        android:id="@+id/button5"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button1"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/button6"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:text="@string/five"/>
    <Button
        android:id="@+id/button6"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button1"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/six"/>
    <Button
        android:id="@+id/button7"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button4"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_alignParentStart="true"
        android:textSize="40sp"
        android:text="@string/seven"/>
    <Button
        android:id="@+id/button8"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button4"
        android:layout_toStartOf="@id/button9"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:text="@string/eight"/>
    <Button
        android:id="@+id/button9"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button4"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/nine"/>
    <Button
        android:id="@+id/button0"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button7"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:text="@string/zero"/>
    <Button
        android:id="@+id/deletedigit"
        android:onClick="onClick"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@id/button7"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_alignParentEnd="true"
        android:textSize="40sp"
        android:text="@string/delete_digit"/>
</RelativeLayout>