<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keyboardNavigationCluster="false"
    android:padding="0dp">

    <WebView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/webBrowser" />

    <EditText
        android:id="@+id/search_edit"
        style="@android:style/Widget.DeviceDefault.AutoCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_toStartOf="@id/button_search"
        android:clickable="false"
        android:fontFamily="sans-serif"
        android:gravity="start"
        android:inputType="text"
        android:hint="@string/search_task"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="5dp"
        android:singleLine="false"
        android:typeface="monospace"
        tools:ignore="Autofill,LabelFor" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@id/search_edit"
        android:background="@drawable/clear"
        android:onClick="onClick"
        android:backgroundTint="?attr/colorPrimaryDark" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/search"
        android:onClick="onClick"
        android:backgroundTint="?attr/colorPrimaryDark" />


    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/button_search"
        android:layout_above="@id/button_tasks"/>


    <Button
        android:id="@+id/button_tasks"
        android:padding="5dp"
        android:layout_width="195dp"
        android:layout_height="70dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:onClick="onClick"
        android:text="@string/tasks"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:padding="5dp"
        android:id="@+id/button_notes"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="195dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/notes"
        android:textAlignment="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:typeface="sans"/>


    <Button
        android:id="@+id/addition"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_above="@id/button_tasks"
        android:layout_alignParentEnd="true"
        android:background="@drawable/plus"
        android:backgroundTint="?attr/colorPrimaryDark"
        android:gravity="center"
        android:onClick="onClick"/>

</RelativeLayout>